@@ -14,10 +14,12 @@
  * You should have received a copy of the Sonar Source-Available License
  * along with this program; if not, see https://sonarsource.com/license/ssal/
  */
+
+// https://sonarsource.github.io/rspec/#/rspec/S117/javascript
 package org.sonar.javascript.checks;
 
-import java.util.Collections;
 import java.util.List;
+import java.util.Map;
 import org.sonar.check.Rule;
 import org.sonar.check.RuleProperty;
 import org.sonar.plugins.javascript.api.Check;
@@ -29,20 +31,15 @@ import org.sonar.plugins.javascript.api.TypeScriptRule;
 @Rule(key = "S117")
 public class S117 extends Check {
 
-  private static final String CAMEL_CASED = "^[_$A-Za-z][$A-Za-z0-9]*$";
-  private static final String UPPER_CASED = "^[_$A-Z][_$A-Z0-9]+$";
-
-  private static final String DEFAULT_FORMAT = CAMEL_CASED + "|" + UPPER_CASED;
-
   @RuleProperty(
     key = "format",
     description = "Regular expression used to check the names against.",
-    defaultValue = "" + DEFAULT_FORMAT
+    defaultValue = "^[_$A-Za-z][$A-Za-z0-9]*$|^[_$A-Z][_$A-Z0-9]+$"
   )
-  public String format = DEFAULT_FORMAT;
+  public String format = "^[_$A-Za-z][$A-Za-z0-9]*$|^[_$A-Z][_$A-Z0-9]+$";
 
   @Override
   public List<Object> configurations() {
-    return Collections.singletonList(new FormatRuleProperty(format));
+    return List.of(Map.of("format", format));
   }
 }
