@@ -14,51 +14,39 @@
  * You should have received a copy of the Sonar Source-Available License
  * along with this program; if not, see https://sonarsource.com/license/ssal/
  */
+
+// https://sonarsource.github.io/rspec/#/rspec/S1192/javascript
 package org.sonar.javascript.checks;
 
-import java.util.Arrays;
 import java.util.List;
+import java.util.Map;
 import org.sonar.check.Rule;
 import org.sonar.check.RuleProperty;
 import org.sonar.plugins.javascript.api.Check;
 import org.sonar.plugins.javascript.api.JavaScriptRule;
 import org.sonar.plugins.javascript.api.TypeScriptRule;
 
-@TypeScriptRule
 @JavaScriptRule
+@TypeScriptRule
 @Rule(key = "S1192")
 public class S1192 extends Check {
-
-  private static final int DEFAULT_THRESHOLD = 3;
-  private static final String DEFAULT_IGNORED_STRINGS = "application/json";
 
   @RuleProperty(
     key = "threshold",
     description = "Number of times a literal must be duplicated to trigger an issue.",
-    defaultValue = "" + DEFAULT_THRESHOLD
+    defaultValue = "" + 3
   )
-  int threshold = DEFAULT_THRESHOLD;
+  public int threshold = 3;
 
   @RuleProperty(
     key = "ignoreStrings",
     description = "Comma-separated list of strings that must be ignored.",
-    defaultValue = "" + DEFAULT_IGNORED_STRINGS
+    defaultValue = "application/json"
   )
-  String ignoreStrings = DEFAULT_IGNORED_STRINGS;
+  public String ignoreStrings = "application/json";
 
   @Override
   public List<Object> configurations() {
-    return Arrays.asList(new Config(threshold, ignoreStrings));
-  }
-
-  private static class Config {
-
-    int threshold;
-    String ignoreStrings;
-
-    public Config(int threshold, String ignoreStrings) {
-      this.threshold = threshold;
-      this.ignoreStrings = ignoreStrings;
-    }
+    return List.of(Map.of("threshold", threshold, "ignoreStrings", ignoreStrings));
   }
 }
