@@ -14,43 +14,32 @@
  * You should have received a copy of the Sonar Source-Available License
  * along with this program; if not, see https://sonarsource.com/license/ssal/
  */
+
+// https://sonarsource.github.io/rspec/#/rspec/S139/javascript
 package org.sonar.javascript.checks;
 
-import java.util.Collections;
 import java.util.List;
+import java.util.Map;
 import org.sonar.check.Rule;
 import org.sonar.check.RuleProperty;
 import org.sonar.plugins.javascript.api.Check;
 import org.sonar.plugins.javascript.api.JavaScriptRule;
 import org.sonar.plugins.javascript.api.TypeScriptRule;
-import org.sonarsource.analyzer.commons.annotations.DeprecatedRuleKey;
 
 @JavaScriptRule
 @TypeScriptRule
 @Rule(key = "S139")
-@DeprecatedRuleKey(ruleKey = "TrailingComment")
 public class S139 extends Check {
-
-  private static final String DEFAULT_LEGAL_COMMENT_PATTERN = "^\\s*[^\\s]+$";
 
   @RuleProperty(
     key = "pattern",
     description = "Pattern (JavaScript syntax) for text of trailing comments that are allowed.",
-    defaultValue = DEFAULT_LEGAL_COMMENT_PATTERN
+    defaultValue = "^\s*[^\s]+$"
   )
-  String legalCommentPattern = DEFAULT_LEGAL_COMMENT_PATTERN;
+  public String ignorePattern = "^\s*[^\s]+$";
 
   @Override
   public List<Object> configurations() {
-    return Collections.singletonList(new Config(legalCommentPattern));
-  }
-
-  private static class Config {
-
-    String ignorePattern;
-
-    Config(String ignorePattern) {
-      this.ignorePattern = ignorePattern;
-    }
+    return List.of(Map.of("ignorePattern", ignorePattern));
   }
 }
