@@ -14,40 +14,31 @@
  * You should have received a copy of the Sonar Source-Available License
  * along with this program; if not, see https://sonarsource.com/license/ssal/
  */
+
+// https://sonarsource.github.io/rspec/#/rspec/S1441/javascript
 package org.sonar.javascript.checks;
 
-import java.util.Arrays;
 import java.util.List;
 import org.sonar.check.Rule;
 import org.sonar.check.RuleProperty;
 import org.sonar.plugins.javascript.api.Check;
 import org.sonar.plugins.javascript.api.JavaScriptRule;
 import org.sonar.plugins.javascript.api.TypeScriptRule;
-import org.sonarsource.analyzer.commons.annotations.DeprecatedRuleKey;
 
 @JavaScriptRule
 @TypeScriptRule
-@DeprecatedRuleKey(ruleKey = "SingleQuote")
 @Rule(key = "S1441")
 public class S1441 extends Check {
-
-  private static final boolean DEFAULT = true;
 
   @RuleProperty(
     key = "singleQuotes",
     description = "Set to true to require single quotes, false for double quotes.",
-    defaultValue = "" + DEFAULT
+    defaultValue = "single"
   )
-  public boolean singleQuotes = DEFAULT;
+  public String value = "single";
 
   @Override
   public List<Object> configurations() {
-    return Arrays.asList(singleQuotes ? "single" : "double", new Config());
-  }
-
-  private static class Config {
-
-    boolean avoidEscape = true;
-    boolean allowTemplateLiterals = true;
+    return List.of(value);
   }
 }
