@@ -14,10 +14,12 @@
  * You should have received a copy of the Sonar Source-Available License
  * along with this program; if not, see https://sonarsource.com/license/ssal/
  */
+
+// https://sonarsource.github.io/rspec/#/rspec/S2376/javascript
 package org.sonar.javascript.checks;
 
-import java.util.Collections;
 import java.util.List;
+import java.util.Map;
 import org.sonar.check.Rule;
 import org.sonar.check.RuleProperty;
 import org.sonar.plugins.javascript.api.Check;
@@ -29,26 +31,15 @@ import org.sonar.plugins.javascript.api.TypeScriptRule;
 @Rule(key = "S2376")
 public class S2376 extends Check {
 
-  private static final boolean DEFAULT_GET_WITHOUT_SET = false;
-
   @RuleProperty(
     key = "getWithoutSet",
     description = "Reports on getters without setters.",
-    defaultValue = "" + DEFAULT_GET_WITHOUT_SET
+    defaultValue = "" + false
   )
-  boolean getWithoutSet = DEFAULT_GET_WITHOUT_SET;
+  public boolean getWithoutSet = false;
 
   @Override
   public List<Object> configurations() {
-    return Collections.singletonList(new Config(getWithoutSet));
-  }
-
-  private static class Config {
-
-    boolean getWithoutSet;
-
-    Config(boolean getWithoutSet) {
-      this.getWithoutSet = getWithoutSet;
-    }
+    return List.of(Map.of("getWithoutSet", getWithoutSet));
   }
 }
